--- a/package.json
+++ b/package.json
@@ -1,11 +1,28 @@
 {
   "name": "courses",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun --hot run src/index.ts"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/body-parser": "^1.19.5",
+    "@types/bun": "latest",
+    "@types/express": "^5.0.0",
+    "@types/luxon": "^3.4.2",
+    "drizzle-kit": "^0.30.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.3",
+    "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
+    "luxon": "^3.5.0",
+    "zod": "^3.24.1"
   }
 }
